<resources>
    <string name="app_name">iCare</string>
    <string name="new_profile_activity">New Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profileName">Profile Name</string>
    <string name="userName">Name</string>
    <string name="bg">Blood Group</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="dob">Date of Birth</string>
    <string name="contactNo">Contact No</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="newProfile">Profile</string>
    <string name="gender">Gender</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="dietInformation">Diet Information</string>
    <string name="vaccinationInformation">Vaccination Information</string>
    <string name="generalInformation">General Information</string>
    <string name="doctorManagement">Doctor Management</string>
    <string name="medicalHistory">Medical History</string>
    <string name="growthInformation">Growth Information</string>
    <string name="edit">Edit</string>
    <string name="remove">Delete</string>
    <string name="notFound">No Data Found</string>
    <string-array name="bloodGroupList">
        <item>A+ve</item>
        <item>B+ve</item>
        <item>AB+ve</item>
        <item>O+ve</item>
        <item>A-ve</item>
        <item>B-ve</item>
        <item>AB-ve</item>
        <item>O-ve</item>
    </string-array>
    <string-array name="navList">
        <item>General Information</item>
        <item>Diet Information</item>
        <item>Vaccination Information</item>
        <item>Doctor Management</item>
        <item>Growth Information</item>
        <item>Medical History</item>
        <item>Remove Profile</item>
    </string-array>
    <integer-array name="iconList">
        <item>@drawable/general_information_icon</item>
        <item>@drawable/diet_informationicon</item>
        <item>@drawable/vaccination_icon</item>
        <item>@drawable/doctor_icon</item>
        <item>@drawable/human_growth_icon</item>
        <item>@drawable/medical_history_icon</item>
        <item>@drawable/remove_profile</item>
    </integer-array>
    <string-array name="weekDay">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    

 <string-array name="vaccineList">
        <item>VAR</item>
        <item>DTaP</item>
        <item>Hib</item>
        <item>HepA</item>
        <item>HepB</item>
        <item>IIV</item>
        <item>MMR</item>
        <item>MMR</item>
        <item>DTaP</item>
        <item>IPV</item>
        <item>PCV13</item>
        <item>RV</item>
        <item>MMR</item>
        <item>DTaP</item>

    </string-array>

    <string-array name="doseMonths">
        <item>12-15&amp;month,4-6&amp;year</item>
        <item>2&amp;month,4&amp;month,6&amp;month,15-18&amp;month,4-6&amp;year</item>
        <item>2&amp;month,4&amp;month,6&amp;month,12-15&amp;month</item>
        <item>12&amp;month,18-23&amp;month</item>
        <item>birth&amp;month,1-2&amp;month,6-18&amp;month</item>
        <item>annual&amp;vaccination</item>
        <item>12-15&amp;month,4-6&amp;year</item>
        <item>12-15&amp;month,4-6&amp;year</item>
        <item>2&amp;month,4&amp;month,6&amp;month,15-18&amp;month,4-6&amp;year</item>
        <item>2&amp;month,4&amp;month,6-18&amp;month,4-6&amp;year</item>
        <item>2&amp;month,4&amp;month,6&amp;month,12-15&amp;month</item>
        <item>2&amp;month,4&amp;month</item>
        <item>12-15&amp;month,4-6&amp;year</item>
        <item>2&amp;month,4&amp;month,6&amp;month,15-18&amp;month,4-6&amp;year</item>
        
    </string-array>

    <string-array name="diseaseComplications">
        <item>Infected&amp;blisters,&amp;bleeding&amp;disorders,&amp;encephalitis&amp;(brain&amp;swelling),&amp;pneumonia&amp;
            (infection&amp;in&amp;the&amp;lungs)</item>
        <item>Swelling&amp;of&amp;the&amp;heart&amp;muscle,&amp;heart&amp;failure,&amp;coma,&amp;paralysis,&amp;death</item>
        <item>Meningitis&amp;(infection&amp;of&amp;the&amp;covering&amp;around&amp;the&amp;brain&amp;and&amp;
            spinal&amp;cord),&amp;intellectual&amp;disability,&amp;epiglottitis&amp;(lifethreatening&amp;infection&amp;that&amp;can&amp;block&amp;the&amp;
            windpipe&amp;and&amp;lead&amp;to&amp;serious&amp;breathing&amp;problems),&amp;pneumonia&amp;(infection&amp;in&amp;the&amp;lungs),&amp;death </item>
        <item>Liver&amp;failure,&amp;arthralgia&amp;(joint&amp;pain),&amp;kidney,&amp;pancreatic,&amp;and&amp;blood&amp;disorders</item>
        <item>Chronic&amp;liver&amp;infection,&amp;liver&amp;failure,&amp;liver&amp;cancer</item>
        <item>Pneumonia&amp;(infection&amp;in&amp;the&amp;lungs)</item>
        <item>Encephalitis&amp;(brain&amp;swelling),&amp;pneumonia&amp;(infection&amp;in&amp;the&amp;lungs),&amp;death</item>
        <item>Meningitis&amp;(infection&amp;of&amp;the&amp;covering&amp;around&amp;the&amp;brain&amp;and&amp;spinal&amp;cord)&amp;,&amp;encephalitis&amp;(brain&amp;swelling),&amp;inflammation&amp;of&amp;testicles&amp;or&amp;ovaries,&amp;deafness</item>
        <item>Pneumonia&amp;(infection&amp;in&amp;the&amp;lungs),&amp;death</item>
        <item>Paralysis,&amp;death</item>
        <item>Bacteremia&amp;(blood&amp;infection),&amp;meningitis&amp;(infection&amp;of&amp;the&amp;covering&amp;around&amp;the&amp;brain&amp;and&amp;spinal&amp;cord),&amp;death</item>
        <item>Severe&amp;diarrhea,&amp;dehydration</item>
        <item>Very&amp;serious&amp;in&amp;pregnant&amp;women—can&amp;lead&amp;to&amp;miscarriage,&amp;stillbirth,&amp;premature&amp;delivery,&amp;birth&amp;defects</item>
        <item>Broken&amp;bones,&amp;breathing&amp;difficulty,&amp;death</item>

    </string-array>

    <string-array name="diseaseNames">
        <item>Chickenpox</item>
        <item>Diphtheria</item>
        <item>Hib</item>
        <item>Hepatitis&amp;A</item>
        <item>Hepatiti&amp;B</item>
        <item>Flu</item>
        <item>Measles</item>
        <item>Mumps</item>
        <item>Pertussis</item>
        <item>Polio</item>
        <item>Pneumococcal</item>
        <item>Rotavirus</item>
        <item>Rubella</item>
        <item>Tetanus</item>
    </string-array>
    <string-array name="causeOfDisease">
        <item>Air,&amp;direct&amp;contact</item>
        <item>Air,&amp;direct&amp;contact</item>
        <item>Air,&amp;direct&amp;contact</item>
        <item>Direct&amp;contact,&amp;contaminated&amp;food&amp;or&amp;water</item>
        <item>Contact&amp;with&amp;blood&amp;or&amp;body&amp;fluids</item>
        <item>Air,&amp;direct&amp;contact</item>
        <item>Air,&amp;direct&amp;contact</item>
        <item>Air,&amp;direct&amp;contact</item>
        <item>Air,&amp;direct&amp;contact</item>
        <item>Air,&amp;direct&amp;contact,&amp;through&amp;the&amp;mouth</item>
        <item>Air,&amp;direct&amp;contact</item>
        <item>Through&amp;the&amp;mouth</item>
        <item>Air,&amp;direct&amp;contact</item>
        <item>Exposure&amp;through&amp;cuts&amp;in&amp;skin</item>

    </string-array>
    <string-array name="diseaseSymptoms">
        <item>Rash, tiredness, headache, fever</item>
        <item>Sore throat, mild fever, weakness, swollen glands in neck</item>
        <item>May be no symptoms unless bacteria enter the blood</item>
        <item>May be no symptoms, fever, stomach pain, loss of appetite, fatigue, vomiting, jaundice (yellowing of skin and eyes), dark urine</item>
        <item>May be no symptoms, fever, headache, weakness, vomiting, jaundice (yellowing of skin and eyes), joint pain</item>
        <item>Fever, muscle pain, sore throat, cough, extreme fatigue</item>
        <item>Rash, fever, cough, runny nose, pinkeye</item>
        <item>Swollen salivary glands (under the jaw), fever, headache, tiredness, muscle pain</item>
        <item>Severe cough, runny nose, apnea (a pause in breathing in infants)</item>
        <item>May be no symptoms, sore throat, fever, nausea, headache</item>
        <item>May be no symptoms, pneumonia (infection in the lungs)</item>
        <item>Diarrhea, fever, vomiting</item>
        <item>Children infected with rubella virus sometimes have a rash, fever, swollen lymph nodes</item>
        <item>Stiffness in neck and abdominal muscles, difficulty swallowing, muscle spasms, fever</item>

    </string-array>
    <string name="title_activity_profile_detail">ProfileDetailActivity</string>
</resources>
