<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/profileName"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <EditText
                    android:id="@+id/profileName"
                    android:layout_width="fill_parent"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext__drawable"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/userName"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:background="@drawable/edittext__drawable"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext__drawable"
                    android:enabled="false"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/contactNo"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <EditText
                    android:id="@+id/contactNo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext__drawable"
                    android:enabled="false"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/dob"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <EditText
                    android:id="@+id/dateOfBirth"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext__drawable"
                    android:enabled="false"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/gender"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <RadioGroup
                    android:id="@+id/genderGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:text="@string/genderMale" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:text="@string/genderFemale" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/bg"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <Spinner
                    android:id="@+id/bloodGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:clickable="false"
                    android:background="@drawable/spinner_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/weight"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext__drawable"
                    android:enabled="false"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_background_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/height"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="#7E354D" />

                <EditText
                    android:id="@+id/height"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext__drawable"
                    android:enabled="false"
                    android:inputType="text" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>